hphp/hack/test/typecheck/reactive/byval_collection_as_property2.php.exp
File "byval_collection_as_property2.php", line 9, characters 7-27:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
